--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="services_cards">
             <div class="cards hidden1">
                 <div class="picture">
-                    <img src="/Images/icon-branding 1.png">
+                    <img src="icon-branding 1.png">
                 </div>
                 <div class="card_content">
                     <h2>BRANDING</h2>
@@ -85,7 +85,7 @@
             </div>
             <div class="cards hidden1">
                 <div class="picture">
-                    <img src="/Images/icon-design 1.png">
+                    <img src="icon-design 1.png">
                 </div>
                 <div class="card_content">
                     <h2>DESIGNE</h2>
@@ -97,7 +97,7 @@
             </div>
             <div class="cards hidden1">
                 <div class="picture">
-                    <img src="/Images/icon-development 1.png">
+                    <img src="icon-development 1.png">
                 </div>
                 <div class="card_content">
                     <h2>DEVELOPMENT</h2>
@@ -109,7 +109,7 @@
             </div>
             <div class="cards hidden1">
                 <div class="picture">
-                    <img src="/Images/icon-rocket 1.png">
+                    <img src="icon-rocket 1.png">
                 </div>
                 <div class="card_content">
                     <h2>ROCKET SCIENCE</h2>
@@ -138,7 +138,7 @@
         <div class="cards2 hidden1">
             <a href="#">
                 <div class="picture pic2">
-                    <img src="/Images/Base.png">
+                    <img src="Base.png">
                 </div></a>
             <div class="card_content2">
                 <h2>ANNE HATHAWAY</h2>
@@ -171,7 +171,7 @@
         <div class="cards2 hidden1">
             <a href="#">
                 <div class="picture pic2">
-                    <img src="/Images/Base (1).png">
+                    <img src="Base (1).png">
                 </div></a>
             <div class="card_content2">
                 <h2>Kate Upton</h2>
@@ -202,7 +202,7 @@
         <div class="cards2 hidden1">
             <a href="#">
                 <div class="picture pic2">
-                    <img src="/Images/Base (2).png">
+                    <img src="Base (2).png">
                 </div></a>
             <div class="card_content2">
                 <h2>Olivia Wilde</h2>
@@ -236,7 +236,7 @@
         <div class="cards2 hidden1">
             <a href="#">
             <div class="picture pic2">
-                <img src="/Images/Base (3).png">
+                <img src="Base (3).png">
             </div></a>
             <div class="card_content2">
                 <h2>Ashley Greene</h2>
@@ -363,7 +363,7 @@
             <div class="services_cards2">
             <div class="cards4">
                 <div class="picture1 hidden1">
-                    <img src="/Images/1.png">
+                    <img src="1.png">
                 </div>
                 <div class="card_content4">
                     <h2>ISOMETRIC PERSPECTIVE MOCK-UP</h2>
@@ -373,7 +373,7 @@
             </div>
             <div class="cards4">
                 <div class="picture1 hidden1">
-                    <img src="/Images/2.png">
+                    <img src="2.png">
                 </div>
                 <div class="card_content4">
                     <h2>TIME ZONE APP UI</h2>
@@ -383,7 +383,7 @@
             </div>
             <div class="cards4">
                 <div class="picture1 hidden1">
-                    <img src="/Images/3.png">
+                    <img src="3.png">
                 </div>
                 <div class="card_content4">
                     <h2>VIRO MEDIA PLAYERS UI</h2>
@@ -393,7 +393,7 @@
             </div>
             <div class="cards4">
                 <div class="picture1 hidden1">
-                    <img src="/Images/4.png">
+                    <img src="4.png">
                 </div>
                 <div class="card_content4">
                     <h2>BLOG / MAGAZINE FLAT UI KIT</h2>
@@ -423,7 +423,7 @@
             <div class="services_cards3">
             <div class="cards5 hidden1">
                 <div class="picture2">
-                    <img src="/Images/Mugshot.png">
+                    <img src="Mugshot.png">
                 </div>
                 <div class="card_content5">                 
                     <p>“Nullam dapibus blandit orci,
@@ -436,7 +436,7 @@
             </div>
             <div class="cards5 hidden1">
                 <div class="picture2">
-                    <img src="/Images/Mugshot (1).png">
+                    <img src="Mugshot (1).png">
                 </div>
                 <div class="card_content5">                 
                     <p> “Vivamus luctus urna sed urna ultricies
@@ -450,7 +450,7 @@
             </div>
             <div class="cards5 hidden1">
                 <div class="picture2 ">
-                    <img src="/Images/Mugshot (2).png">
+                    <img src="Mugshot (2).png">
                 </div>
                 <div class="card_content5">                   
                     <p>“Vivamus luctus urna sed urna ultricies
@@ -463,7 +463,7 @@
             </div>
             <div class="cards5 hidden1">
                 <div class="picture2">
-                    <img src="/Images/Mugshot (3).png">
+                    <img src="Mugshot (3).png">
                 </div>
                 <div class="card_content5">                  
                     <p>“Phasellus non purus vel arcu tempor 
